# capnpc-serde

./: LICENSE
capnpc-serde/: Cargo.toml  result.json  schema.json  sss
capnpc-serde/src/: cache.rs  common.rs  error_handler.rs  lib.rs  main.rs  serializer.rs
capnpc-serde/src/serializer/: annotaion.rs  annotation_decl_node.rs  built_in_type.rs  const_node.rs  enum_node.rs  facade.rs  field.rs  file_node.rs  interface_node.rs  literal_value.rs  method.rs  struct_node.rs  util.rs
capnpc-serde/testdata/: phone.capnp  phone.capnp.c++  phone.capnp.h  sample.capnp
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/capnpc_serde/: all.html  fn.serialize_cap.html  index.html  sidebar-items.js
doc/src/capnpc_serde/: cache.rs.html  common.rs.html  error_handler.rs.html  lib.rs.html  serializer.rs.html
doc/src/capnpc_serde/serializer/: annotaion.rs.html  annotation_decl_node.rs.html  built_in_type.rs.html  const_node.rs.html  enum_node.rs.html  facade.rs.html  field.rs.html  file_node.rs.html  interface_node.rs.html  literal_value.rs.html  method.rs.html  struct_node.rs.html  util.rs.html
example/python/: python_example.py  run.sh
example/rust/: Cargo.toml  README.md  result.md  sample2
example/rust/src/: main.rs
example/rust/templates/: all.tmpl  enum.tmpl  field.tmpl  file.tmpl  interface.tmpl  method.tmpl  relationship.tmpl  struct.tmpl
example/rust/templates-pu/: all.tmpl  enum.tmpl  field.tmpl  file.tmpl  interface.tmpl  method.tmpl  relationship.tmpl  struct.tmpl
script/: commit.sh
