[package]
name = "capnpc-serde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "capnpc-serde"
path = "src/main.rs"

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
capnp = "0.17.1"
capnpc = "0.17.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
clap = { version = "4.3.11", features = ["derive"] }
